k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: service-mysql
spec:
  type: ClusterIP
  ports:
  - protocol: TCP  # protocolo padrao
    port: 3306
    targetPort: 3306
  selector:
    app: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticontrolaapi
spec:
  selector:
    matchLabels:
      app: ticontrolaapi
  template:
    metadata:
      labels:
        app: ticontrolaapi
    spec:
      containers:
      - name: ticontrolaapi
        image: leommiranda/ti-controla-django-api:latest
        imagePullPolicy: "Always"
        ports:
          - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: ticontrolaapi
spec:
  type: ClusterIP
  ports:
  - protocol: TCP  # protocolo padrao
    port: 80
    targetPort: 8080
  selector:
    # matchLabels:
    app: ticontrolaapi
